Tests d'integració afegits